--- a/alura-viagens/Base.lproj/Main.storyboard
+++ b/alura-viagens/Base.lproj/Main.storyboard
@@ -16,14 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="AKy-Og-epX">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="AKy-Og-epX">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="AKy-Og-epX" secondAttribute="bottom" id="5Bc-Fz-GXI"/>
+                            <constraint firstItem="AKy-Og-epX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="INU-2R-Xpp"/>
+                            <constraint firstItem="AKy-Og-epX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="P8k-DW-5P2"/>
+                            <constraint firstItem="AKy-Og-epX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Xon-kL-JGl"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="viagensTableView" destination="AKy-Og-epX" id="VtH-CI-U9D"/>
