--- a/alura-viagens/Base.lproj/Main.storyboard
+++ b/alura-viagens/Base.lproj/Main.storyboard
@@ -11,32 +11,32 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="alura_viagens" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AluraViagens" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="AKy-Og-epX">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MU2-iA-qfx">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="AKy-Og-epX" secondAttribute="bottom" id="5Bc-Fz-GXI"/>
-                            <constraint firstItem="AKy-Og-epX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="INU-2R-Xpp"/>
-                            <constraint firstItem="AKy-Og-epX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="P8k-DW-5P2"/>
-                            <constraint firstItem="AKy-Og-epX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Xon-kL-JGl"/>
+                            <constraint firstAttribute="bottom" secondItem="MU2-iA-qfx" secondAttribute="bottom" id="E0t-e2-SOP"/>
+                            <constraint firstItem="MU2-iA-qfx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Udd-UP-Tsr"/>
+                            <constraint firstItem="MU2-iA-qfx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gEW-rB-ctS"/>
+                            <constraint firstItem="MU2-iA-qfx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="kGm-ki-RTY"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="viagensTableView" destination="AKy-Og-epX" id="VtH-CI-U9D"/>
+                        <outlet property="viagensTableView" destination="MU2-iA-qfx" id="9Y3-6H-5pA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="44.927536231884062" y="69.642857142857139"/>
+            <point key="canvasLocation" x="137.68115942028987" y="114.50892857142857"/>
         </scene>
     </scenes>
     <resources>
