--- a/alura-viagens/View/Header/HomeTableViewHeader.xib
+++ b/alura-viagens/View/Header/HomeTableViewHeader.xib
@@ -10,16 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HomeTableViewHeader" customModule="AluraViagens" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HomeTableViewHeader" customModule="alura_viagens" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uFb-3P-tLl" userLabel="Header View">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                    <rect key="frame" x="-293" y="0.0" width="1000" height="250"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="alura viagens" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3w9-wH-t3s">
-                            <rect key="frame" x="31" y="48" width="144" height="33"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="alura viagens" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3w9-wH-t3s">
+                            <rect key="frame" x="313" y="48" width="144" height="33"/>
                             <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="23"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -27,6 +26,8 @@
                     </subviews>
                     <color key="backgroundColor" red="0.11764705882352941" green="0.23137254901960785" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstAttribute="width" constant="1000" id="OEq-VV-5Dh"/>
+                        <constraint firstItem="3w9-wH-t3s" firstAttribute="top" secondItem="uFb-3P-tLl" secondAttribute="top" constant="48" id="sfI-Vq-g4O"/>
                         <constraint firstAttribute="height" constant="250" id="unq-eP-wqY"/>
                     </constraints>
                 </view>
@@ -35,9 +36,31 @@
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vlS-2R-A5b">
                             <rect key="frame" x="0.0" y="0.0" width="200" height="130"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aproveito o verão, com:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82w-86-M6f">
+                                    <rect key="frame" x="16" y="14" width="168" height="62"/>
+                                    <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="22"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ofertas exclusivas, somente no nosso app" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iSj-Po-K2Y">
+                                    <rect key="frame" x="16" y="82" width="168" height="34"/>
+                                    <fontDescription key="fontDescription" name="KohinoorDevanagari-Regular" family="Kohinoor Devanagari" pointSize="12"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
                             <color key="backgroundColor" red="0.31764705882352939" green="0.70196078431372544" blue="0.69411764705882351" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstItem="82w-86-M6f" firstAttribute="top" secondItem="vlS-2R-A5b" secondAttribute="top" constant="14" id="E9N-qw-bhY"/>
+                                <constraint firstAttribute="bottom" secondItem="iSj-Po-K2Y" secondAttribute="bottom" constant="14" id="HMP-CD-SlT"/>
+                                <constraint firstItem="iSj-Po-K2Y" firstAttribute="leading" secondItem="vlS-2R-A5b" secondAttribute="leading" constant="16" id="SOv-l2-vfo"/>
+                                <constraint firstAttribute="trailing" secondItem="82w-86-M6f" secondAttribute="trailing" constant="16" id="aeD-yM-3gC"/>
+                                <constraint firstItem="82w-86-M6f" firstAttribute="leading" secondItem="vlS-2R-A5b" secondAttribute="leading" constant="16" id="jpW-U1-Oy7"/>
+                                <constraint firstAttribute="trailing" secondItem="iSj-Po-K2Y" secondAttribute="trailing" constant="16" id="pz5-uD-Sio"/>
+                            </constraints>
                         </view>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PCi-xL-Da6">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ferias" translatesAutoresizingMaskIntoConstraints="NO" id="PCi-xL-Da6">
                             <rect key="frame" x="199" y="0.0" width="176" height="130"/>
                         </imageView>
                     </subviews>
@@ -56,18 +79,18 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="3w9-wH-t3s" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="Jas-BW-x8w"/>
                 <constraint firstItem="H4L-5b-8a4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="VyJ-cc-KkV"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="H4L-5b-8a4" secondAttribute="trailing" constant="19" id="bQz-aK-vlt"/>
                 <constraint firstItem="H4L-5b-8a4" firstAttribute="bottom" secondItem="uFb-3P-tLl" secondAttribute="bottom" constant="10" id="eCu-hr-K1Q"/>
-                <constraint firstItem="uFb-3P-tLl" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="hEi-eP-S8T"/>
                 <constraint firstItem="uFb-3P-tLl" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="mfb-KH-KWQ"/>
-                <constraint firstItem="uFb-3P-tLl" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="pI7-1v-Ud4"/>
+                <constraint firstItem="uFb-3P-tLl" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="uIi-LU-Fcr"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="bannerImageView" destination="PCi-xL-Da6" id="10S-6m-MT9"/>
+                <outlet property="bannerView" destination="H4L-5b-8a4" id="Eje-J8-XIT"/>
                 <outlet property="headerView" destination="uFb-3P-tLl" id="Lfm-fW-3C8"/>
                 <outlet property="tituloLabel" destination="3w9-wH-t3s" id="rV7-dK-xvS"/>
             </connections>
@@ -75,6 +98,7 @@
         </view>
     </objects>
     <resources>
+        <image name="ferias" width="988" height="1364"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
