--- a/alura-viagens/View/Header/HomeTableViewHeader.xib
+++ b/alura-viagens/View/Header/HomeTableViewHeader.xib
@@ -22,6 +22,9 @@
                             <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="23"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
+                            <variation key="heightClass=regular-widthClass=regular">
+                                <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="35"/>
+                            </variation>
                         </label>
                     </subviews>
                     <color key="backgroundColor" red="0.11764705882352941" green="0.23137254901960785" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
@@ -42,18 +45,28 @@
                                     <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="22"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
+                                    <variation key="heightClass=regular-widthClass=regular">
+                                        <fontDescription key="fontDescription" name="KohinoorDevanagari-Semibold" family="Kohinoor Devanagari" pointSize="27"/>
+                                    </variation>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ofertas exclusivas, somente no nosso app" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iSj-Po-K2Y">
                                     <rect key="frame" x="16" y="82" width="168" height="34"/>
                                     <fontDescription key="fontDescription" name="KohinoorDevanagari-Regular" family="Kohinoor Devanagari" pointSize="12"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
+                                    <variation key="heightClass=regular-widthClass=regular">
+                                        <fontDescription key="fontDescription" name="KohinoorDevanagari-Regular" family="Kohinoor Devanagari" pointSize="17"/>
+                                    </variation>
                                 </label>
                             </subviews>
                             <color key="backgroundColor" red="0.31764705882352939" green="0.70196078431372544" blue="0.69411764705882351" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstItem="82w-86-M6f" firstAttribute="top" secondItem="vlS-2R-A5b" secondAttribute="top" constant="14" id="E9N-qw-bhY"/>
-                                <constraint firstAttribute="bottom" secondItem="iSj-Po-K2Y" secondAttribute="bottom" constant="14" id="HMP-CD-SlT"/>
+                                <constraint firstItem="82w-86-M6f" firstAttribute="top" secondItem="vlS-2R-A5b" secondAttribute="top" constant="14" id="E9N-qw-bhY">
+                                    <variation key="heightClass=regular-widthClass=regular" constant="25"/>
+                                </constraint>
+                                <constraint firstAttribute="bottom" secondItem="iSj-Po-K2Y" secondAttribute="bottom" constant="14" id="HMP-CD-SlT">
+                                    <variation key="heightClass=regular-widthClass=regular" constant="25"/>
+                                </constraint>
                                 <constraint firstItem="iSj-Po-K2Y" firstAttribute="leading" secondItem="vlS-2R-A5b" secondAttribute="leading" constant="16" id="SOv-l2-vfo"/>
                                 <constraint firstAttribute="trailing" secondItem="82w-86-M6f" secondAttribute="trailing" constant="16" id="aeD-yM-3gC"/>
                                 <constraint firstItem="82w-86-M6f" firstAttribute="leading" secondItem="vlS-2R-A5b" secondAttribute="leading" constant="16" id="jpW-U1-Oy7"/>
