--- a/alura-viagens/View/Cells/Oferta/OfertaTableViewCell.xib
+++ b/alura-viagens/View/Cells/Oferta/OfertaTableViewCell.xib
@@ -98,7 +98,7 @@
                                     <constraint firstItem="Wu9-o1-H88" firstAttribute="top" secondItem="GBX-11-P4V" secondAttribute="top" id="pc7-x5-iFO"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YU5-iK-XIj">
+                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YU5-iK-XIj">
                                 <rect key="frame" x="149" y="0.0" width="139" height="363"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T8J-v4-JOI">
